<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.prestige.kaelmok.pmix.StockTake" >

    <CheckBox
        android:id="@+id/checkBoxCode128"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBoxEAN13"
        android:layout_below="@+id/checkBoxEAN13"
        android:checked="true"
        android:text="@string/code128"
        android:layout_alignStart="@+id/checkBoxEAN13" />

    <Spinner
        android:id="@+id/spinnerScannerDevices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBoxEAN13"
        android:layout_alignStart="@+id/checkBoxEAN13" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/spinnerScannerDevices"
        android:text="@string/select_scanner" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/buttonStopScan"
        android:layout_below="@+id/textView3"
        android:layout_alignEnd="@+id/buttonStopScan">

        <LinearLayout
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/textViewData"
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:gravity="center" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewStatus"
        android:layout_below="@+id/textViewStatus"
        android:text="@string/data"
        android:layout_alignStart="@+id/textViewStatus" />

    <Spinner
        android:id="@+id/spinnerTriggers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerScannerDevices"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignStart="@+id/spinnerScannerDevices" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/spinnerScannerDevices"
        android:text="@string/select_trigger_type"
        android:layout_alignStart="@+id/textView2" />

    <CheckBox
        android:id="@+id/checkBoxEAN13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:layout_marginRight="50dp"
        android:checked="true"
        android:text="@string/ean13"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp" />

    <CheckBox
        android:id="@+id/checkBoxContinuous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBoxCode39"
        android:layout_alignStart="@+id/checkBoxCode39"
        android:layout_below="@+id/textView5"
        android:checked="true"
        android:text="@string/continuous" />

    <CheckBox
        android:id="@+id/checkBoxCode39"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBoxEAN8"
        android:checked="true"
        android:text="@string/code39" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBoxContinuous"
        android:layout_alignStart="@+id/checkBoxContinuous"
        android:layout_below="@+id/buttonStartScan"
        android:text="@string/status"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/spinnerTriggers"
        android:text="@string/set_decoders"
        android:layout_alignStart="@+id/textView1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBoxContinuous"
        android:layout_below="@+id/checkBoxCode39"
        android:text="@string/scan"
        android:layout_alignStart="@+id/checkBoxContinuous" />

    <CheckBox
        android:id="@+id/checkBoxEAN8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checkBoxCode128"
        android:layout_alignLeft="@+id/checkBoxCode39"
        android:checked="true"
        android:text="@string/ean8"
        android:layout_alignStart="@+id/checkBoxCode39" />

    <Button
        android:id="@+id/buttonStartScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonStopScan"
        android:layout_alignBottom="@+id/buttonStopScan"
        android:layout_toLeftOf="@+id/buttonStopScan"
        android:layout_toStartOf="@+id/buttonStopScan"
        android:text="@string/start" />

    <Button
        android:id="@+id/buttonStopScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/checkBoxCode128"
        android:layout_alignRight="@+id/checkBoxCode128"
        android:layout_alignTop="@+id/checkBoxContinuous"
        android:text="@string/stop" />

</RelativeLayout>